[gd_scene load_steps=5 format=3 uid="uid://cnt2gonn60ik2"]

[ext_resource type="Texture2D" uid="uid://l5bvxg4o17xe" path="res://entities/docked_player_ship/player_ship_docked.svg" id="2_ahgkh"]
[ext_resource type="Script" path="res://entities/docked_player_ship/docked_player_ship.gd" id="2_ontt7"]
[ext_resource type="PackedScene" uid="uid://b43vj03bxa5lh" path="res://components/interactable_area/interactable_area.tscn" id="3_x47t1"]
[ext_resource type="PackedScene" uid="uid://cf2yjm70xnmi3" path="res://ui/general/standard_label/standard_label.tscn" id="4_qnkht"]

[node name="DockedPlayerShip" type="CharacterBody2D"]
script = ExtResource("2_ontt7")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_ahgkh")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(-78, -406, 77, -404, 144.359, -317.182, 169, -364, 254, -368, 289.902, -129.593, 437, 60, 441, 323, 241, 323, 283, 402, 49, 402, 86, 319, -1, 338, -85, 321, -48, 402, -286, 402, -238, 319, -438, 321, -440, 64, -286, -136, -255, -366, -163, -364, -146, -317)

[node name="LeftInteractableArea" parent="." node_paths=PackedStringArray("_toggle_visibility") instance=ExtResource("3_x47t1")]
position = Vector2(-500, 135)
_toggle_visibility = NodePath("EnterLabelLeft")

[node name="EnterLabelLeft" parent="LeftInteractableArea" instance=ExtResource("4_qnkht")]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -140.0
offset_right = 50.0
offset_bottom = -56.0
grow_horizontal = 2
grow_vertical = 2
text = "Enter (E)"

[node name="RightInteractableArea" parent="." node_paths=PackedStringArray("_toggle_visibility") instance=ExtResource("3_x47t1")]
position = Vector2(500, 135)
_toggle_visibility = NodePath("EnterLabelRight")

[node name="EnterLabelRight" parent="RightInteractableArea" instance=ExtResource("4_qnkht")]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -140.0
offset_right = 200.0
offset_bottom = -56.0
grow_horizontal = 2
grow_vertical = 2
text = "Enter (E)"

[connection signal="interacted_with" from="LeftInteractableArea" to="." method="_on_left_interactable_area_interacted_with"]
[connection signal="interacted_with" from="RightInteractableArea" to="." method="_on_right_interactable_area_interacted_with"]
